# libboard

./: .gitignore  AUTHORS  CMakeLists.txt  ChangeLog  Description  Doxyfile  EXAMPLES.md  README.md  TODO  configure
examples/: Huffman.cpp  Julia.cpp  arithmetic.cpp  array.cpp  arrows.cpp  bezier.cpp  board_font_text.cpp  circled.cpp  circled_framed.cpp  clipping.cpp  ellipse.cpp  example1.cpp  example2.cpp  example3.cpp  example4.cpp  example5.cpp  fern.cpp  flag.cpp  graph.cpp  holes.cpp  hull.cpp  images.cpp  interpolate.cpp  koch.cpp  line_segment.cpp  line_style.cpp  logo.cpp  rough.cpp  ruler.cpp  sandbox.cpp  scale_ellipse.cpp  sierpinski.cpp  stroke_path.cpp  test_arrow.cpp  test_depth.cpp  tilings.cpp  traversal.cpp  triangles.cpp  xkcd.cpp
include/: Board.h  BoardConfig.h  BoardConfig.h.in
include/board/: Arrow.h  Bezier.h  Board.ih  BoardFontText.h  Color.h  Debug.h  Dot.h  Ellipse.h  Exception.h  Globals.h  Group.h  Image.h  Line.h  PSFonts.h  Path.h  PathBoundaries.h  Point.h  Polyline.h  Rect.h  RoughVisitor.h  Shape.h  ShapeList.h  ShapeList.ih  ShapeVisitor.h  ShapeWithStyle.h  Shapes.h  Shapes.ih  SketchFilter.h  Style.h  Text.h  Tools.h  Tools.ih  TransformMatrix.h  TransformMatrix.ih  Transforms.h  Transforms.ih  Types.h
resources/: toto.fig  toto.fig.bak
resources/debian/: changelog  control  copyright
src/: Arrow.cpp  Bezier.cpp  Board.cpp  BoardFontText.cpp  BoardFont_inc.cpp  Color.cpp  Dot.cpp  Ellipse.cpp  Exception.cpp  Group.cpp  Image.cpp  Line.cpp  PSFonts.cpp  Path.cpp  PathBoundaries.cpp  Point.cpp  Polyline.cpp  Rect.cpp  RoughVisitor.cpp  Shape.cpp  ShapeList.cpp  ShapeVisitor.cpp  ShapeWithStyle.cpp  Shapes.cpp  SketchFilter.cpp  Style.cpp  Text.cpp  Tools.cpp  TransformMatrix.cpp  Transforms.cpp
